# AMI-WEB

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.unix.yaml  .pre-commit-config.win.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  AGENTS.md  ANTIDETECT_STATUS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CODEBASE_ANALYSIS_SUMMARY.md  CODE_EXCEPTIONS.md  CODE_QUALITY_ISSUES.md  CONFORMITY.md  CONTRIBUTING.md  FIXME.md  IMPORT_MIGRATION_SUMMARY.md  INSTR.md  LICENCE  MCP.md  Makefile  README.md  README_EXTENDED.md  REPORT-FALLBACKS.md  SENTENCE.md  SETUP_CONTRACT.md  SPEC-TEST-RESTRUCTURE.md  STUPID_SHIT.md  TODO-AUDIT.md  TODO-MYPY.md  TODO-TOOL-SAFETY.md  V02-SPEC.md  chrome_manager_tech_spec.md  claude_desktop_config.json.example  claude_desktop_config_macos.json.example  claude_desktop_config_ready.json  config.sample.yaml  config.yaml  (+34 more)
.claude/: settings.local.json
backend/config/: user_agents.json
backend/controllers/: async_sync_utils.py  base.py  controller_config.py
backend/controllers/context/: frames.py  tabs.py
backend/controllers/devtools/: config.py  devtools.py  network.py  performance.py
backend/controllers/input/: __init__.py  coordinate.py  drag.py  forms.py  keyboard.py  mouse.py  touch.py
backend/controllers/media/: screenshot.py  video.py
backend/controllers/navigation/: extractor.py  navigator.py  scroller.py  storage.py  waiter.py
backend/core/browser/: instance.py  lifecycle.py  options.py  properties_manager.py  tab_manager.py
backend/core/management/: browser_worker_pool.py  manager.py  manager_v2.py  migrate_to_v2.py  pool.py  profile_manager.py  session_manager.py
backend/core/monitoring/: monitor.py
backend/core/security/: antidetect.py  script_validator.py  tab_injector.py
backend/extensions/: ANALYSIS.md
backend/facade/: base.py  config.py  utils.py
backend/mcp/base/: auth.py  (+2 more)
backend/models/: browser.py  browser_properties.py  mcp.py  media.py  security.py
backend/scripts/: ANALYSIS.md
backend/services/: property_injection.py
backend/utils/: __init__.py  compute_profile.py  config.py  exceptions.py  javascript.py  parser.py  paths.py  selectors.py  threading.py  timing.py
chrome_manager/: __init__.py  mcp_server.py
chrome_manager/core/: ANALYSIS.md  __init__.py  antidetect.py  antidetect_injection.py  browser_helper.py  browser_instance_refactored.py  browser_lifecycle.py  browser_monitor.py  browser_options.py  browser_storage.py  cdp_injector.py  instance.py  manager.py  pool.py  profile_manager.py  properties_manager.py  session.py  session_manager.py  simple_antidetect.py  simple_tab_injector.py  tab_manager.py  window_monitor.py
chrome_manager/extensions/: ANALYSIS.md
chrome_manager/facade/: ANALYSIS.md  __init__.py  base.py  config.py  context.py  devtools.py  input.py  media.py  navigation.py
chrome_manager/mcp/: ANALYSIS.md  __main__.py  chrome_server.py  config.py  mcp_stdio_server.py  run_stdio.py  server.py
chrome_manager/models/: ANALYSIS.md  __init__.py  browser.py  browser_properties.py  mcp.py  media.py
chrome_manager/scripts/: .eslintrc.json  ANALYSIS.md  antidetect-optimized.js  complete-antidetect.js  h264-fix.js  plugins-fix.js  plugins-simple.js  unified-spoof.js  webgl-aggressive.js  window-open-interceptor.js
chrome_manager/services/: __init__.py
chrome_manager/templates/: browser_properties.js
chrome_manager/utils/: ANALYSIS.md  __init__.py  config.py  exceptions.py  parser.py  selectors.py
configs/: config.linux.yaml  config.osx.yaml  config.win.yaml
docs/: ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  MCP.md  README_EXTENDED.md
res/: forbidden_script_patterns.yaml
res/configs/: claude_desktop_config.json.example  claude_desktop_config_macos.json.example  claude_desktop_config_windows.json.example
scripts/: ami_path.py  get_chrome_osx.sh  install_chrome_deps.sh  run_chrome.py  run_chrome_fastmcp.py  run_fast_tests.py  run_mcp_server.py  run_tests.py  setup_chrome.py  start_mcp_server.py  start_mcp_server_uv.py
scripts/hooks/: check_unstaged.sh  pre-commit  pre-push
scripts/setup/: __init__.py  chrome.py  utils.py  version_utils.py
tests/: ANALYSIS.md  README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  bot_detection_test.html  test_server.py  threaded_server.py
tests/integration/: README_MCP.md  conftest.py  test_antidetection.py  test_browser_integration.py  test_browser_properties.py  test_chrome_fastmcp_server.py  test_html_token_limit.py  test_kill_orphaned_flag.py  test_mcp_client_helpers.py  test_mcp_environment_tools.py  test_mcp_html_token_limit.py  test_mcp_logs_storage.py  test_mcp_server.py  test_mcp_server_refactored.py  test_mcp_tab_management.py  test_mcp_tab_session_integration.py  test_multiple_tabs_session_persistence.py  test_nonexistent_session_restore.py  test_orphaned_process_kill.py  test_profile_conflict.py  test_profile_manager_initialization.py  test_profile_session_persistence.py  test_profiles_sessions.py  test_real_website_session_save.py  test_run_chrome_runner.py  test_run_mcp_runner.py  test_screen_space_interactions.py  test_script_validation_integration.py  test_session_persistence_e2e.py  test_session_restore_profile_conflict.py  test_web_search_tool.py
tests/unit/: __init__.py  conftest.py  fixtures.py  test_antidetection.py  test_browser_instance.py  test_browser_navigation.py  test_browser_properties.py  test_chrome_manager.py  test_data_root.py  test_manager_profile_assignment.py  test_mcp_auth.py  test_mcp_protocol.py  test_mcp_rate_limit.py  test_profile_default.py  test_profile_facade.py  test_profile_isolation.py  test_profile_manager.py  test_react_tools.py  test_script_validator.py  test_search_tools.py  test_session_facade.py  test_session_https_profile.py  test_session_manager.py  test_session_rename.py  test_session_restore_error_detection.py  test_stale_lock_cleanup.py  test_tool_limits.py
tests/utils/: browser_utils.py
web/config/: antidetect-config.json
web/extensions/: ANALYSIS.md
web/scripts/: ANALYSIS.md  complete-antidetect.js  config-loader.js
(+268 files in other folders)
