[project]
name = "chrome-manager"
version = "0.1.0"
description = "Advanced Chrome browser automation and management framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.15.0",
    "undetected-chromedriver>=3.5.3",
    "loguru>=0.7.2",
    "pydantic>=2.5.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "pillow>=10.1.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
    "pre-commit>=3.6.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.12",
    "types-beautifulsoup4>=4.12.0",
]

mcp = [
    "mcp>=0.9.0",
    "anthropic>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
timeout = 300
timeout_method = "thread"
timeout_func_only = false
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py312"
line-length = 150
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C", "DTZ", "DJ", "EM", "ISC", "PIE", "PT", "Q", "RET", "SIM", "ARG", "PLR", "PLW", "TRY", "RUF"]
ignore = ["E501", "S101", "TRY003", "EM101", "EM102", "ISC001", "COM812", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true