[project]
name = "ami-browser"
version = "0.1.0"
description = "Browser module for AMI orchestrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "AMI Team" } ]

dependencies = [
  "pydantic==2.11.9",
  "loguru==0.7.3",
  "psutil==7.1.0",
  "opencv-python==4.12.0.88",
  "PyYAML==6.0.3",
  "Pillow==11.3.0",
  "beautifulsoup4==4.14.2",
  "aiofiles==24.1.0",
  "aiohttp==3.12.15",
  "webdriver-manager==4.0.2",
  "chromedriver-binary==142.0.7443.0.0",
  "selenium==4.35.0",
  "jinja2==3.1.6",
  "lxml==6.0.2",
  "numpy==2.2.6",
  "python-dotenv==1.1.1",
  "types-psutil==7.0.0.20250822",
  "types-PyYAML==6.0.12.20250915",
  "mcp==1.15.0",
  "fastmcp==2.12.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "faker==37.8.0",
  "ruff==0.13.2",
  "pre-commit==4.3.0",
  "mypy==1.18.2",
]

[project.scripts]
run-chrome = "browser.scripts.run_chrome:main"
run-browser-tests = "browser.scripts.run_tests:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["browser*"]

[tool.uv]
package = true
dev-dependencies = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "faker==37.8.0",
  "ruff==0.13.2",
  "pre-commit==4.3.0",
  "mypy==1.18.2",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
