[metadata]
name = chrome-manager
version = 0.1.0

[options]
packages = find:
python_requires = >=3.12

[options.packages.find]
include = chrome_manager*
exclude = 
    tests*
    test_*
    browser_profiles*
    test_profiles*
    test_downloads*
    downloads*
    screenshots*
    sessions*
    chromium*
    drivers*
    res*